--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1448,16 +1448,42 @@ QTabBar::tab:selected {
                </layout>
               </item>
               <item row="0" column="1">
-               <layout class="QVBoxLayout" name="verticalLayout_16">
+               <layout class="QVBoxLayout" name="reasonVetAnimalEditLayout">
+                <property name="spacing">
+                 <number>0</number>
+                </property>
                 <item>
-                 <widget class="QLabel" name="label_2">
+                 <widget class="QLabel" name="reasonVetAnimalEditLabel">
                   <property name="text">
                    <string>RAISON</string>
                   </property>
                  </widget>
                 </item>
                 <item>
-                 <widget class="QLineEdit" name="lineEdit"/>
+                 <layout class="QHBoxLayout" name="horizontalLayout_9">
+                  <item>
+                   <widget class="QComboBox" name="reasonVetAnimalBox">
+                    <item>
+                     <property name="text">
+                      <string>Vaccin</string>
+                     </property>
+                    </item>
+                    <item>
+                     <property name="text">
+                      <string>Stérilisation</string>
+                     </property>
+                    </item>
+                    <item>
+                     <property name="text">
+                      <string>Autre</string>
+                     </property>
+                    </item>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLineEdit" name="reasonVetAnimalEdit"/>
+                  </item>
+                 </layout>
                 </item>
                </layout>
               </item>
