--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -86,7 +86,11 @@ QPushButton{
 	border-radius:5px;
 }
 
-QToolButton, QPushButton{
+QPushButton:hover {
+    background-color: #4c5c75;
+}
+
+QPushButton{
 	border:none;
 }
 
@@ -485,7 +489,7 @@ border:1px solid gray;</string>
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>4</number>
+         <number>11</number>
         </property>
         <widget class="QWidget" name="homePage"/>
         <widget class="QWidget" name="dogCardsPage">
@@ -693,7 +697,7 @@ color:#212834;</string>
              </widget>
             </item>
             <item>
-             <widget class="QToolButton" name="entryAddButton">
+             <widget class="HoverToolButton" name="entryAddButton">
               <property name="text">
                <string/>
               </property>
@@ -1931,7 +1935,7 @@ color:#212834;</string>
              </widget>
             </item>
             <item>
-             <widget class="QToolButton" name="careAddButton">
+             <widget class="HoverToolButton" name="careAddButton">
               <property name="text">
                <string/>
               </property>
@@ -2069,7 +2073,7 @@ color:#212834;</string>
              <widget class="QWidget" name="redListHorizontalPlacehold" native="true"/>
             </item>
             <item>
-             <widget class="QToolButton" name="redListAddButton">
+             <widget class="HoverToolButton" name="redListAddButton">
               <property name="text">
                <string>...</string>
               </property>
@@ -2207,7 +2211,7 @@ QCheckBox::indicator:unchecked{
              <widget class="QWidget" name="lostHorizontalPlacehold" native="true"/>
             </item>
             <item>
-             <widget class="QToolButton" name="lostAddButton">
+             <widget class="HoverToolButton" name="lostAddButton">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
@@ -2342,7 +2346,7 @@ QCheckBox::indicator:unchecked{
              </widget>
             </item>
             <item>
-             <widget class="QToolButton" name="membersAddButton">
+             <widget class="HoverToolButton" name="membersAddButton">
               <property name="text">
                <string>...</string>
               </property>
@@ -2475,7 +2479,7 @@ QCheckBox::indicator:unchecked{
              <widget class="QWidget" name="vetHorizontalPlacehold" native="true"/>
             </item>
             <item>
-             <widget class="QToolButton" name="vetAddButton">
+             <widget class="HoverToolButton" name="vetAddButton">
               <property name="text">
                <string>...</string>
               </property>
@@ -2611,6 +2615,11 @@ QCheckBox::indicator:unchecked{
    <extends>QWidget</extends>
    <header>loginpage.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>HoverToolButton</class>
+   <extends>QToolButton</extends>
+   <header>hovertoolbutton.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
