--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -135,7 +135,7 @@ QCheckBox::indicator {
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QFormLayout" name="formLayout_2">
+   <layout class="QHBoxLayout" name="horizontalLayout_15">
     <property name="leftMargin">
      <number>0</number>
     </property>
@@ -148,197 +148,223 @@ QCheckBox::indicator {
     <property name="bottomMargin">
      <number>0</number>
     </property>
-    <item row="0" column="0">
-     <widget class="MenuTree" name="menuTree">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+    <item>
+     <layout class="QVBoxLayout" name="verticalLayout_22">
+      <property name="spacing">
+       <number>0</number>
       </property>
-      <property name="styleSheet">
-       <string notr="true">QTreeView::branch{
+      <item>
+       <widget class="QLabel" name="menuLogoLabel">
+        <property name="styleSheet">
+         <string notr="true">background: white;
+padding-top:5px;
+padding-bottom:5px;
+border-right:1px solid #aaa</string>
+        </property>
+        <property name="text">
+         <string>MouchkiNet</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="MenuTree" name="menuTree">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QTreeView::branch{
 	image:none;
 }
 
 QTreeView::item { margin-top: 30px; }</string>
-      </property>
-      <property name="itemsExpandable">
-       <bool>false</bool>
-      </property>
-      <property name="animated">
-       <bool>true</bool>
-      </property>
-      <property name="headerHidden">
-       <bool>true</bool>
-      </property>
-      <property name="columnCount">
-       <number>1</number>
-      </property>
-      <attribute name="headerCascadingSectionResizes">
-       <bool>true</bool>
-      </attribute>
-      <attribute name="headerDefaultSectionSize">
-       <number>200</number>
-      </attribute>
-      <column>
-       <property name="text">
-        <string/>
-       </property>
-      </column>
-      <item>
-       <property name="text">
-        <string> Accueil</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>media/home_gray.svg</normaloff>
-         <selectedoff>media/home_white.svg</selectedoff>media/home_gray.svg</iconset>
-       </property>
+        </property>
+        <property name="frameShape">
+         <enum>QFrame::NoFrame</enum>
+        </property>
+        <property name="itemsExpandable">
+         <bool>false</bool>
+        </property>
+        <property name="animated">
+         <bool>true</bool>
+        </property>
+        <property name="headerHidden">
+         <bool>true</bool>
+        </property>
+        <property name="columnCount">
+         <number>1</number>
+        </property>
+        <attribute name="headerCascadingSectionResizes">
+         <bool>true</bool>
+        </attribute>
+        <attribute name="headerDefaultSectionSize">
+         <number>200</number>
+        </attribute>
+        <column>
+         <property name="text">
+          <string/>
+         </property>
+        </column>
+        <item>
+         <property name="text">
+          <string> Accueil</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>media/home_gray.svg</normaloff>
+           <selectedoff>media/home_white.svg</selectedoff>media/home_gray.svg</iconset>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string> Fiches chiens</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>media/dog_gray.svg</normaloff>
+           <selectedoff>media/dog_white.svg</selectedoff>media/dog_gray.svg</iconset>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>  Registres</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>media/registry_gray.svg</normaloff>
+           <selectedoff>media/registry_white.svg</selectedoff>media/registry_gray.svg</iconset>
+         </property>
+         <item>
+          <property name="text">
+           <string> Entrées/Sorties</string>
+          </property>
+          <property name="background">
+           <brush brushstyle="NoBrush">
+            <color alpha="255">
+             <red>45</red>
+             <green>57</green>
+             <blue>76</blue>
+            </color>
+           </brush>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string> Garderie</string>
+          </property>
+          <property name="background">
+           <brush brushstyle="NoBrush">
+            <color alpha="255">
+             <red>45</red>
+             <green>57</green>
+             <blue>76</blue>
+            </color>
+           </brush>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string> Adhérents</string>
+          </property>
+          <property name="background">
+           <brush brushstyle="NoBrush">
+            <color alpha="255">
+             <red>45</red>
+             <green>57</green>
+             <blue>76</blue>
+            </color>
+           </brush>
+          </property>
+         </item>
+        </item>
+        <item>
+         <property name="text">
+          <string> Vétérinaire</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>media/nurse_gray.svg</normaloff>
+           <selectedoff>media/nurse_white.svg</selectedoff>media/nurse_gray.svg</iconset>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string> Autres</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>media/circle_gray.svg</normaloff>
+           <selectedoff>media/circle_white.svg</selectedoff>media/circle_gray.svg</iconset>
+         </property>
+         <item>
+          <property name="text">
+           <string> Liste rouge adoptants</string>
+          </property>
+          <property name="background">
+           <brush brushstyle="NoBrush">
+            <color alpha="255">
+             <red>45</red>
+             <green>57</green>
+             <blue>76</blue>
+            </color>
+           </brush>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string> Animaux perdus</string>
+          </property>
+          <property name="background">
+           <brush brushstyle="NoBrush">
+            <color alpha="255">
+             <red>45</red>
+             <green>57</green>
+             <blue>76</blue>
+            </color>
+           </brush>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string> Demandes d'adoption</string>
+          </property>
+          <property name="background">
+           <brush brushstyle="NoBrush">
+            <color alpha="255">
+             <red>45</red>
+             <green>57</green>
+             <blue>76</blue>
+            </color>
+           </brush>
+          </property>
+         </item>
+        </item>
+        <item>
+         <property name="text">
+          <string> Paramètres</string>
+         </property>
+         <property name="icon">
+          <iconset>
+           <normaloff>media/wrench_gray.svg</normaloff>
+           <selectedoff>media/wrench_white.svg</selectedoff>media/wrench_gray.svg</iconset>
+         </property>
+        </item>
+       </widget>
       </item>
-      <item>
-       <property name="text">
-        <string> Fiches chiens</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>media/dog_gray.svg</normaloff>
-         <selectedoff>media/dog_white.svg</selectedoff>media/dog_gray.svg</iconset>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string>  Registres</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>media/registry_gray.svg</normaloff>
-         <selectedoff>media/registry_white.svg</selectedoff>media/registry_gray.svg</iconset>
-       </property>
-       <item>
-        <property name="text">
-         <string> Entrées/Sorties</string>
-        </property>
-        <property name="background">
-         <brush brushstyle="NoBrush">
-          <color alpha="255">
-           <red>45</red>
-           <green>57</green>
-           <blue>76</blue>
-          </color>
-         </brush>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string> Garderie</string>
-        </property>
-        <property name="background">
-         <brush brushstyle="NoBrush">
-          <color alpha="255">
-           <red>45</red>
-           <green>57</green>
-           <blue>76</blue>
-          </color>
-         </brush>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string> Adhérents</string>
-        </property>
-        <property name="background">
-         <brush brushstyle="NoBrush">
-          <color alpha="255">
-           <red>45</red>
-           <green>57</green>
-           <blue>76</blue>
-          </color>
-         </brush>
-        </property>
-       </item>
-      </item>
-      <item>
-       <property name="text">
-        <string> Vétérinaire</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>media/nurse_gray.svg</normaloff>
-         <selectedoff>media/nurse_white.svg</selectedoff>media/nurse_gray.svg</iconset>
-       </property>
-      </item>
-      <item>
-       <property name="text">
-        <string> Autres</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>media/circle_gray.svg</normaloff>
-         <selectedoff>media/circle_white.svg</selectedoff>media/circle_gray.svg</iconset>
-       </property>
-       <item>
-        <property name="text">
-         <string> Liste rouge adoptants</string>
-        </property>
-        <property name="background">
-         <brush brushstyle="NoBrush">
-          <color alpha="255">
-           <red>45</red>
-           <green>57</green>
-           <blue>76</blue>
-          </color>
-         </brush>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string> Animaux perdus</string>
-        </property>
-        <property name="background">
-         <brush brushstyle="NoBrush">
-          <color alpha="255">
-           <red>45</red>
-           <green>57</green>
-           <blue>76</blue>
-          </color>
-         </brush>
-        </property>
-       </item>
-       <item>
-        <property name="text">
-         <string> Demandes d'adoption</string>
-        </property>
-        <property name="background">
-         <brush brushstyle="NoBrush">
-          <color alpha="255">
-           <red>45</red>
-           <green>57</green>
-           <blue>76</blue>
-          </color>
-         </brush>
-        </property>
-       </item>
-      </item>
-      <item>
-       <property name="text">
-        <string> Paramètres</string>
-       </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>media/wrench_gray.svg</normaloff>
-         <selectedoff>media/wrench_white.svg</selectedoff>media/wrench_gray.svg</iconset>
-       </property>
-      </item>
-     </widget>
+     </layout>
     </item>
-    <item row="0" column="1">
+    <item>
      <layout class="QVBoxLayout" name="mainVerticalLayout">
       <property name="spacing">
        <number>6</number>
       </property>
       <item>
        <widget class="QWidget" name="topHorizontalWidget" native="true">
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
         <layout class="QHBoxLayout" name="topHorizontalLayout">
          <property name="leftMargin">
           <number>5</number>
@@ -489,7 +515,7 @@ border:1px solid gray;</string>
          <enum>QFrame::NoFrame</enum>
         </property>
         <property name="currentIndex">
-         <number>6</number>
+         <number>4</number>
         </property>
         <widget class="QWidget" name="homePage"/>
         <widget class="QWidget" name="dogCardsPage">
